# neophytic-purple-rooms-baseline

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  server.py
tests/: conftest.py  test_agent.py  utils.py
